<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".views.screens.note_detail.DetailActivity">

    <include android:id="@+id/detail_activity_toolbar" layout="@layout/detail_activity_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/top_add_item_btn"
                layout="@layout/detail_activity_btn_add_item"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/detail_activity_list_item" />

            <include
                android:id="@+id/bottom_add_item_btn"
                layout="@layout/detail_activity_btn_add_item"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>