<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_add_note"
        android:icon="@drawable/ic_add_white"
        android:title="Add Note"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_reset_all_notifications"
        android:title="Reset all notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_delete_all_notes"
        android:title="Delete all notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_open_image"
        android:title="Scan Image"
        android:icon="@drawable/ic_img"
        app:showAsAction="ifRoom" />


</menu>